# sample-project

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements_dev.txt  tox.ini
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml  typecheck.yml
docs/: conf.py  index.rst
my_package/file_functions/: __init__.py  data_paths.py  open_read_file.py
my_package/number_functions/: __init__.py  addition_subtraction.py  numpy_array_sum.py
my_package/string_functions/: __init__.py  some_string_functions.py
tests/: test_file_functions.py  test_number_functions.py  test_string_functions.py
