[project]
name = "my_package"
description = "My Python package."
version = "0.1.0"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["my_package"]

[tool.pytest.ini_options]
addopts = "--cov=my_package --cov-report=term-missing --cov-append"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = ["__init__.py"]

[tool.mypy]
exclude = [
    'tests',
    'docs',
]
warn_unused_configs = true

[tool.black]
line-length = 120
extend-exclude = '''
(
    docs
)
'''
